Agregue un Lorem

--- a/prueba.html
+++ b/prueba.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Prueba de Git en VS Code</h1>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem ipsum optio nostrum consequatur blanditiis debitis similique velit repudiandae sunt mollitia magni, odit voluptatibus qui recusandae beatae cumque ratione, vitae doloribus?</h2>
     <h2>Este es otro parrafo de prueba</h2>
 </body>
 </html>
