--- a/prueba.html
+++ b/prueba.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de Git</title>
+    <title>GitHub Page</title>
 </head>
 <body>
-    <h1>Prueba de Git en VS Code</h1>
-    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem ipsum optio nostrum consequatur blanditiis debitis similique velit repudiandae sunt mollitia magni, odit voluptatibus qui recusandae beatae cumque ratione, vitae doloribus?</h2>
-    <h2>Este es otro parrafo de prueba</h2>
+    <h1>Mi pagina funcionando con GitHub Page</h1>
 </body>
 </html>
